1. Refactored the Templates with the new material that i have learned - Template inheritance. 2. Added button to our Instagram. 3. Added comment form under our Hikes page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,5 @@
-<!DOCTYPE HTML>
-<!--
-	Theory by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
-<html>
-	<head>
-		<title>Theory by TEMPLATED</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="/static/assets/css/main.css" />
-	</head>
-	<body>
-
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href={% url 'index' %} class="logo">БаирБудалите</a>
-					<nav id="nav">
-						<a href={% url 'index' %}>Home</a>
-						<a href={% url 'pohodi' %}>Походи</a>
-						<a href="elements.html">Снимки</a>
-					</nav>
-					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
-				</div>
-			</header>
-
+{% extends 'base.html' %}
+{% block content %}
 		<!-- Banner -->
 			<section id="banner">
 				<h1>Добре дошли в БаирБудалите</h1>
@@ -43,7 +17,7 @@
 							</header>
 							<p>{{ pohod.description_small }}</p>
 							<footer>
-								<a href="#" class="button special">Прочети още</a>
+								<a href="{% url 'pohod' pohod.id %}" class="button special">Прочети още</a>
 							</footer>
 						</article>
                         {% endfor %}
@@ -89,30 +63,5 @@
 					</div>
 				</div>
 			</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="flex">
-						<div class="copyright">
-							&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
-						</div>
-						<ul class="icons">
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
-							<li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
-							<li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
-						</ul>
-					</div>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="/static/assets/js/jquery.min.js"></script>
-			<script src="/static/assets/js/skel.min.js"></script>
-			<script src="/static/assets/js/util.js"></script>
-			<script src="/static/assets/js/main.js"></script>
-
-	</body>
-</html>
+    {% include 'common/scripts.html' %}
+{% endblock %}
