1. Reworked the auth templates

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -23,6 +23,8 @@
 				</div>
 				<div class="form-row-last">
 					<input type="submit" name="register" class="register" value="Login">
+                    <h6>или се </h6>
+                    <a href="{% url 'register' %}">Регистрирай</a>
 				</div>
 			</form>
 		</div>
