--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -33,6 +33,8 @@
 				</div>
 				<div class="form-row-last">
 					<input type="submit" name="register" class="register" value="Register">
+                    <h6>или </h6>
+                    <a href="{% url 'login' %}">Влез</a>
 				</div>
 			</form>
 		</div>
