1. Added cloud for the media.

--- a/templates/auth/edit_profile.html
+++ b/templates/auth/edit_profile.html
@@ -13,7 +13,7 @@
                     <div class="row m-l-0 m-r-0">
                         <div class="col-sm-4 bg-c-lite-green user-profile">
                             <div class="card-block text-center text-white">
-                                <div class="m-b-25"> <img src="/media/{{ profile.profile_picture }}" class="img-radius" alt="User-Profile-Image"> </div>
+                                <div class="m-b-25"> <img src="{{profile.profile_picture.build_url}}" class="img-radius" alt="User-Profile-Image"> </div>
                                 <h6 class="f-w-600">{{ profile.user.username }}</h6>
                             </div>
                         </div>
