--- a/templates/pohod.html
+++ b/templates/pohod.html
@@ -37,7 +37,7 @@
         {% endif %}
         {% for com in comment %}
         <div class="box">
-            <img class="resize" src="/media/{{ com.user_profile.profile_picture }}">
+            <img class="resize" src="{{ com.user_profile.profile_picture.build_url }}">
             <a href="{% url 'profile' com.user_profile.user_id %}" >{{ com.user_profile.user.username }}</a>
             <p>{{ com.comment }}</p>
             {% if user.id == com.user_profile.user_id %}
