--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>BairBudalite</title>
 		<meta charset="utf-8" />
-        <link rel="icon" href="{% static '/images/logo/logo.png' %}" type="image/icon type">
+        <link rel="icon" href="{% static 'images/logo/logo.png' %}" type="image/icon type">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{% static '/assets/css/main.css'%}" />
         {% block extra %}
