1. Removed leading slashes

--- a/templates/auth/delete_profile.html
+++ b/templates/auth/delete_profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block extra %}
-  <link rel="stylesheet" href="{% static '/assets/css/auth/profile.css'%}" />
+  <link rel="stylesheet" href="{% static 'assets/css/auth/profile.css'%}" />
 {% endblock extra %}
 {% block content %}
     <div class="center-block">
