--- a/templates/common/mooving_gallery.html
+++ b/templates/common/mooving_gallery.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="{% static '/assets/css/gallery_css.css'%}" />
+<link rel="stylesheet" href="{% static 'assets/css/gallery_css.css'%}" />
 </html>
 <body>
 <!-- Container for the image gallery -->
