--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block extra %}
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <link rel="stylesheet" href="{% static '/assets/css/auth/profile.css'%}" />
+  <link rel="stylesheet" href="{% static 'assets/css/auth/profile.css'%}" />
 {% endblock extra %}
 {% block content %}
 <div class="page-content page-container" id="page-content">
