1. Reworked the static files

--- a/templates/pohod.html
+++ b/templates/pohod.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block extra %}
-<link rel="stylesheet" href="{% static '/assets/css/gallery_css.css'%}" />
+<link rel="stylesheet" href="{% static 'assets/css/gallery_css.css'%}" />
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 {% endblock %}
 {% block content %}
