--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -31,6 +31,11 @@
                     <label for="picture">Profile picture</label>
 					{{ form_profile.profile_picture }}
 				</div>
+                    {% for _, error in form.error_messages.items %}
+                        <div class="alert alert-danger">
+                            <strong>{{ error }}</strong>
+                        </div>
+                    {% endfor %}
 				<div class="form-row-last">
 					<input type="submit" name="register" class="register" value="Register">
                     <h6>или </h6>
