--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -4,6 +4,7 @@
 					<nav id="nav">
 						<a href={% url 'index' %}>Начало</a>
 						<a href={% url 'pohodi' %}>Походи</a>
+                        <a href={% url 'projects' %}>Проекти</a>
                         {% if not user.is_authenticated %}
                         <a href="{% url 'login' %}">Вход</a>
                         <a href="{% url 'register' %}">Регистрация</a>
