--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,23 +5,24 @@
 {% endblock %}
 {% block content %}
 <section id="one" class="wrapper">
-				<div class="inner">
-					<div class="flex flex-3">
-                        {% for project in projects %}
-                        {% if project.done %}
-                            <div class="card text-white bg-success mb-3" style="max-width: 30rem;">
-                        {% else %}
-                            <div class="card text-white bg-danger mb-3" style="max-width: 30rem;">
-                        {% endif %}
-                              <img class="card-img-top" src="{{ project.first_image }}" alt="Card image cap">
-                              <div class="card-body">
-                                <h5 class="card-title">{{ project.name }}</h5>
-                                <p class="card-text">{{ project.description|truncatechars_html:200  }}</p>
-                                <a href="#" class="btn btn-primary">Прочети още</a>
-                              </div>
-                        </div>
-                        {% endfor %}
-					</div>
-				</div>
-			</section>
+    <div class="inner">
+        <div class="flex flex-3">
+            {% for project in projects %}
+                {% if project.done %}
+                    <div class="card text-white bg-success mb-3" style="max-width: 30rem;">
+                {% else %}
+                    <div class="card text-white bg-danger mb-3" style="max-width: 30rem;">
+                {% endif %}
+            <img class="card-img-top" src="{{ project.first_image }}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">{{ project.name }}</h5>
+                <p class="card-text">{{ project.description|truncatechars_html:200  }}</p>
+                <a href="{% url 'project' project.id %}" class="btn btn-primary">Прочети още</a>
+            </div>
+            </div>
+            {% endfor %}
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
