--- a/templates/projects.html
+++ b/templates/projects.html
@@ -18,6 +18,13 @@
                 <h5 class="card-title">{{ project.name }}</h5>
                 <p class="card-text">{{ project.description|truncatechars_html:200  }}</p>
                 <a href="{% url 'project' project.id %}" class="btn btn-primary">Прочети още</a>
+            {% if user.is_staf %}
+                    {% if not project.done %}
+                        <a class="btn btn-success" href="{% url 'projects with pk' project.id %}">Маркирай като завършен</a>
+                    {% else %}
+                        <a class="btn btn-danger" href="{% url 'projects with pk' project.id %}">Маркирай като не завършен</a>
+                    {% endif %}
+            {% endif %}
             </div>
             </div>
             {% endfor %}
