1. Site is now mobile-friendly

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,14 +54,13 @@
 						<p>Част от видео колекцията на Будалите</p>
 					</header>
 					<div class="flex flex-2">
-						<article>
+						<article class="videoWrapper">
 							<iframe width="640" height="360" src="https://www.youtube.com/embed/W4fejyIH7_E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</article>
-						<article>
+						<article class="videoWrapper">
 						<iframe width="640" height="360" src="https://www.youtube.com/embed/Al8IHywTusc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</article>
 					</div>
 				</div>
 			</section>
-    {% include 'common/scripts.html' %}
 {% endblock %}
