--- a/static/assets/css/gallery_css.css
+++ b/static/assets/css/gallery_css.css
@@ -3,14 +3,14 @@
 }
 
 img {
-    width:  300px;
-    height: 600px;
+    width:  100%;
+    height: 100%;
 }
 /* Position the image container (needed to position the left and right arrows) */
 .container {
   position: relative;
   width: 100%;
-  height: 600px;
+  height: 100%;
 
 }
 
@@ -32,9 +32,7 @@ img.resize {
 .prev,
 .next {
   cursor: pointer;
-  position: absolute;
-  top: -5%;
-  width: auto;
+  position: relative;
   padding: 16px;
   margin-top: 300px;
   color: white;
@@ -47,8 +45,8 @@ img.resize {
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
   border-radius: 3px 0 0 3px;
+  right: -45%;
 }
 
 /* On hover, add a black background color with a little bit see-through */
